--- a/src/layouts/styles.css
+++ b/src/layouts/styles.css
@@ -44,6 +44,8 @@ pre {
 
 .doc-content pre {
   @apply -mx-8 mb-8 py-4;
+  overflow-x: scroll !important;
+  -webkit-overflow-scrolling: touch !important;
 }
 
 .doc-content h3 {
